tests/fixtures/invalid/bool_ge_str.py
# Cannot compare with >= Bool and Str
x: bool = True >= "hello"
